--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,6 @@ article {
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
   justify-items: center;
-  min-height: 293px;
   background-color: white;
   font-size: 18px;
   line-height: 18px;
@@ -39,7 +38,6 @@ article {
   margin: 0;
   display: flex; /* делаем элемент flex-контейнером */
   gap: 32px;
-  white-space: nowrap; /* все элементы в одну строку */
 }
 
 .nav-non-active-link {
@@ -61,6 +59,8 @@ article {
 
 .header-logo {
   align-items: center; /*задаем положение логотипа??? мб зря добавляла, ничего не меняет*/
+  padding-top: 92px;
+  padding-bottom: 92px;
 }
 
 .header-img {
@@ -79,7 +79,7 @@ article {
   line-height: 24px;
 }
 
-.address-phone {
+.underline-offset {
   text-underline-offset: 4px;
 }
 
@@ -93,21 +93,18 @@ article {
   list-style-type: none;
 }
 
-.cover::before {
-  /*этот класс дался с ОЧЕНЬ большой болью*/
-  content: "";
+.overlay {
   position: absolute;
-  top: 0; /* прижимаем элемент к родительскому */
-  left: 0; /* прижимаем элемент к родительскому */
-  height: 100%; /* высота растянута  */
-  width: 100%; /* ширина растянута */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(
-    0,
-    0,
-    0,
-    0.6
-  ); /* полупрозрачный черный фон в 60%(см. фигму) */
-  z-index: 1; /* помещаем элемент ниже текста, чтобы он тоже не затемнялся */
+    0, 
+    0, 
+    0, 
+    0.6);
+  z-index: 1;
 }
 
 .cover {
@@ -194,12 +191,8 @@ article {
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
-.link-white {
-  color: white;
-  text-decoration: none; /* убираем подчеркивание */
-}
-
 .link-nav {
+  /* наименование ссылки исправлено */
   color: black;
   text-decoration: none; /* убираем подчеркивание */
 }
@@ -242,18 +235,6 @@ article {
   padding: 25px; /* отступы вокруг лотов */
 }
 
-.lots-item-cinema::before {
-  /*затемнение*/
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: -1;
-}
-
 .lots-item-cinema {
   background-image: url(../images/card-lot-01.jpg);
   max-width: 334px;
@@ -265,18 +246,6 @@ article {
   z-index: 1;
 }
 
-.lots-item-book::before {
-  /*затемнение*/
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: -1;
-}
-
 .lots-item-book {
   background-image: url(../images/card-lot-02.jpg);
   height: 596px; /* высота лота */
@@ -286,18 +255,6 @@ article {
   background-position: center;
   position: relative;
   z-index: 1;
-}
-
-.lots-item-painting::before {
-  /*затемнение*/
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: -1;
 }
 
 .lots-item-painting {
@@ -320,7 +277,7 @@ article {
   text-transform: uppercase;
 }
 
-.lots-description-h {
+.lots-description-lead {
   /* заголовок описания лота */
   color: white;
   font-size: 22px;
@@ -331,6 +288,7 @@ article {
   padding-top: 48px;
   text-decoration: underline;
   text-transform: uppercase;
+  position: relative;
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
@@ -414,10 +372,7 @@ article {
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
-}
-
-.par-2 {
-  padding-top: 25px; /* отступы между параграфами */
+  gap: 25px;
 }
 
 .footer {
@@ -443,7 +398,7 @@ article {
   padding-bottom: 38px;
 }
 
-.footer-nav-li {
+.margin-top {
   margin-top: 5px; /* создаем пробел между пунктами, gap не сработал*/
 }
 
