--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 body {
   font-family: "Raleway", sans-serif; /* закидываем скачанный шрифт, задаем фон и цвет текста во всем теле */
-  background-color: rgb(245, 245, 245);
   color: black;
   margin: 0 auto;
   padding: 0;
@@ -33,20 +32,24 @@ article {
 
 .nav-list {
   /*список для навигации*/
-  list-style: none;
+  list-style-type: none;
   padding-left: 50px;
   margin: 0;
   display: flex; /* делаем элемент flex-контейнером */
   gap: 32px;
 }
 
-.nav-non-active-link {
-  list-style: none;
+.link-active { /*!ПОДУМАТЬ надо ли сотавлять, если у ссылок цвет в начале задается!*/
+  /* наименование ссылки исправлено */
+  color: black;
 }
 
-.nav-link-active {
+.no-deco-link {
+  text-decoration: none;
+}
+
+.list-deco {
   /*псевдо-активная ссылка */
-  border-bottom: 1px solid black;
   list-style-type: circle;
 }
 
@@ -187,15 +190,9 @@ article {
   word-spacing: 20px; /* размер пробелов */
   color: white;
   text-transform: uppercase;
-  white-space: nowrap; /* чтобы текст не переносился */
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
-.link-nav {
-  /* наименование ссылки исправлено */
-  color: black;
-  text-decoration: none; /* убираем подчеркивание */
-}
 
 .button-bet {
   /*ДА КАК ЕЕ СДЕЛАТЬ ОНА ЕДЕТ ПОСТОЯННО КРИК ДУШИ ПРОСТО */
@@ -209,7 +206,7 @@ article {
   justify-content: center;
   align-items: center;
   text-align: center;
-  border: 1px solid white; /* белая рамка */
+  border: 1px solid currentColor; /* белая рамка */
   color: white; /* белый цвет текста */
   font-size: 22px; /* размер шрифта */
   text-transform: uppercase;
@@ -235,37 +232,28 @@ article {
   padding: 25px; /* отступы вокруг лотов */
 }
 
-.lots-item-cinema {
-  background-image: url(../images/card-lot-01.jpg);
+.lots-item {
+  display: flex;
+  flex-direction: column;
   max-width: 334px;
-  height: 596px; /* высота лота */
+  min-height: 596px; /* высота лота */
   background-size: cover; /* картинка должна покрывать весь элемент */
   background-position: center;
   background-repeat: no-repeat; /* не повторяем картинку */
   position: relative;
   z-index: 1;
+}
+
+.lots-item-cinema {
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .lots-item-book {
   background-image: url(../images/card-lot-02.jpg);
-  height: 596px; /* высота лота */
-  max-width: 334px;
-  background-size: cover; /* картинка должна покрывать весь элемент */
-  background-repeat: no-repeat; /* не повторяем картинку */
-  background-position: center;
-  position: relative;
-  z-index: 1;
 }
 
 .lots-item-painting {
   background-image: url(../images/card-lot-03.jpg);
-  height: 596px; /* высота лота */
-  max-width: 334px;
-  background-size: cover; /* картинка должна покрывать весь элемент */
-  background-repeat: no-repeat; /* не повторяем картинку */
-  background-position: center;
-  position: relative;
-  z-index: 1;
 }
 
 .lots-title {
@@ -286,6 +274,7 @@ article {
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 48px;
+  margin-bottom: auto; /* хитро выталкиваем текст вниз без абсолютного позиционирования */
   text-decoration: underline;
   text-transform: uppercase;
   position: relative;
@@ -294,15 +283,14 @@ article {
 
 .lots-description {
   /* описание лота */
-  position: absolute; /* чтобы текст правильно стоял */
-  bottom: 0;
   color: white;
   font-size: 20px;
   line-height: 24px;
-  font-weight: 400;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 48px;
+  font-weight: 400;
+  position: relative;
   z-index: 2; /* помещаем текст поверх псевдоэлемента */
 }
 
@@ -341,7 +329,7 @@ article {
   align-items: center; /* выравниваем по центру */
 }
 
-.white-logo {
+.about-logo {
   margin: auto; /* выравниваем по центру */
   max-width: 148px;
 }
@@ -381,7 +369,6 @@ article {
   margin: 0 auto; /* выравниваем по центру */
   font-size: 18px;
   max-width: 1100px; /* задаем максимальную ширину */
-  min-height: 180px;
   background-color: white;
   color: black;
   display: grid; /* делаем элемент грид-контейнером */
@@ -406,8 +393,7 @@ article {
   /* стили для адреса в футере */
   padding-left: 50px; /* отступ слева */
   padding-bottom: 5px;
-  max-width: 261px;
-  white-space: nowrap;
+  max-width: 315px;
 }
 
 .socials {
