Все фиксы с ревью внесены

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,16 @@ article {
   gap: 32px;
 }
 
-.link-active { /*!ПОДУМАТЬ надо ли сотавлять, если у ссылок цвет в начале задается!*/
+.nav-link-header { /*общий класс для навигации в заголовке*/
+  color: black; 
+}
+
+.nav-link-footer { /*общий класс для навигации в футере*/
+  color: black;
+  text-align: center;
+}
+
+.link-active { /*!ПОДУМАТЬ надо ли сотавлять, если у ссылок цвет в начале задается!(надо)*/
   /* наименование ссылки исправлено */
   color: black;
 }
@@ -393,7 +402,7 @@ article {
   /* стили для адреса в футере */
   padding-left: 50px; /* отступ слева */
   padding-bottom: 5px;
-  max-width: 315px;
+  max-width: 315px; /* потому что математика--царица наук, фактический размер+паддинг=315, выкрутилась! */
 }
 
 .socials {
